# SEDD

./: .gitignore  README.md  pyproject.toml
app/frontend/: index.html  main.js  styles.css
configs/: arc_model_registry.json  remote_16gb_pretrain.yaml  tiny_pretrain.yaml  tiny_rl.yaml  tiny_sft.yaml
docs/: interview_qa.md  runbook.md  sedd_understanding.md
notebooks/: sedd_pipeline.ipynb
scripts/: official_prepare_toy.sh  official_rl_smoke.sh  official_sft_smoke.sh  prepare_toy.sh  remote_env.sh  remote_official_pipeline_smoke.sh  remote_official_sample.sh  remote_s1k_demo_pipeline.sh  remote_setup.sh  remote_setup_official.sh  remote_smoke.sh  remote_sync_back.sh  remote_sync_to.sh  remote_train_16gb.sh  run_app.sh  run_notebook.sh  setup_official_backend.sh  setup_uv.sh  train_smoke.sh
src/sedd_mini/: __init__.py  backend.py  checkpoint.py  config.py  data.py  diffusion.py  evaluate.py  mcqa_data.py  model.py  official_backend.py  official_evaluate.py  official_export.py  official_finetune.py  official_posttrain_rl.py  official_prepare_data.py  posttrain_rl.py  prepare_data.py  reward.py  sample.py  sampling.py  server.py  tokenizer.py  train.py  utils.py
tests/: test_dcolt_rl.py  test_diffusion.py  test_lora_sft.py  test_mcqa_data.py  test_official_fallback.py  test_sampling.py  test_server.py  test_tokenizer.py
